Version 23     2015-May-1

--Fixed reading parameters from header of playback file.

--Fixed crash on next game when letting go of a slider just as the move timeout
  happens (thanks Jonathan HP).





Version 22     Live Server Fixes

--Support in admin interface for awarding cabal member compensation points.

--Fixed so that cabal contest scores can never go below 0 to remove the benefit
  of starting over with a fresh account after losing points.

--Added support for a series of cabal contests spaced out over time and run
  automatically.




Version 22     2015-April-7

--Fixed bug in lingering commit button when dragging a slider and releasing it
  in a way that presses the commit button (thanks Benjamin Y).

--Part of parchment was peeking out under black overlay square during board
  fade-out.  Made overlay square slightly larger to fix this.

--Fixed so that player count on menu screen doesn't flicker on auto-reload when
  there are no active games.

--Added active player count to WAITING FOR OPPONENT screen (protocol change).

--Added support for a list of chosen opponents in launch contest instead of
  just one.

--Added display of contest points won/lost on post-game results screen
  (protocol change).






Version 21     Live Server Fixes

--Added 5-minute cache for vs-creator contest leaderboard (so that you can't
  watch for immediate changes in leaderboard to know when creator has recently
  left a game).





Version 21     2015-April-2

--Added display of active player count in client.

--Moved client amulet display over to make room for large player balances that
  could move down to next line.

--Added support on server for vs-creator launch contest (collusion-proof
  replacement for amulet contest suggested originally by Jere as a joke).





Version 20     Live Server Fixes

--Added retry-based work-around for a bug in PHP/MySQL that triggers an
  occasional 'Unable to save result set' warning and query failure.



