@@ -1,3 +1,10 @@
+Version 23     Live Server Fixes
+
+--Cabal compensation points now awarded automatically.
+
+
+
+
 Version 23     2015-May-1
 
 --Fixed reading parameters from header of playback file.
